Segunda entrega (revisión 2). Exceptions